# Agent_Rubric

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
agentrubric/: __init__.py  config.py  constants.py  logger.py  rubric_scorer.py  run_pipeline.py  utils.py
agentrubric/agents/: hack_detector.py  reward_scorer.py  rubric_critic.py  rubric_designer.py
agentrubric/dashboard/: visualize.py
agentrubric/eval/: __init__.py  gold_judge.py
agentrubric/experiments/: run_experiment.py
agentrubric/flywheel/: __init__.py  preference_store.py  transcript_filter.py
agentrubric/graph/: conditional_edges.py  graph.py  persistence.py  state.py
agentrubric/preprocessing/: __init__.py  prepare_datasets.py
agentrubric/retrieval/: bm25_retriever.py
agentrubric/rubrics/: code_correctness.txt  code_quality.txt  coding.txt  default.txt  helpfulness.txt  safety.txt
agentrubric/tests/: test_graph.py  test_regression.py  test_scorer.py  test_training.py
agentrubric/training/: dataset_prep.py  lora_config.py  model_loader.py  monitor.py  reward_inference.py  reward_trainer.py  train.ipynb
outputs/: README.md  STRUCTURE.txt  preference_pairs.db
outputs/datasets/: eval.jsonl  preference_pairs.jsonl  sample_responses.json
outputs/datasets/benchmarks/: code_preference_eval.jsonl
outputs/datasets/phase4/: train.jsonl
outputs/evaluation/: experiment_summary.json  gold_scores_cache.json  per_sample_results.csv  winrate.json
outputs/preference-generation/results/: phase3_results.json
scripts/: verify.py
(+4 files in other folders)
